# pytest-postgresql

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.tests  Pipfile  README.rst  check_coverage.py  docker-compose.tests.yml  pyproject.toml  run-docker-tests.ps1  run-docker-tests.py  run-docker-tests.sh
.github/workflows/: automerge.yml  oldest-postgres.yml  single-postgres.yml  tests.yml
newsfragments/: +e9a4c914.misc.rst
pytest_postgresql/: executor.py
tests/: conftest.py  test_chaining.py  test_config.py  test_exceptions.py  test_executor.py  test_factories_client.py  test_factories_init.py  test_factories_noprocess.py  test_factories_process.py  test_janitor.py  test_loader.py  test_module_imports.py  test_noopexecutor.py  test_plugin.py  test_postgres_options_plugin.py  test_postgresql.py  test_retry.py  test_template_database.py  test_version.py  test_windows_compatibility.py
tests/docker/: test_noproc_docker.py
